--- a/src/pages/pemakaian/pemakaian.html
+++ b/src/pages/pemakaian/pemakaian.html
@@ -67,7 +67,7 @@
 
   <ion-item>
     <ion-label stacked><font color="black">No Permintaan</font></ion-label>
-    <ion-input placeholder="Tulis sesuatu" [(ngModel)]="no_permintaan" style="color:grey"></ion-input>
+    SC - <ion-input placeholder="Tulis sesuatu" [(ngModel)]="no_permintaan"  type="number" style="color:grey"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label stacked><font color="black">No Kontak</font></ion-label>
@@ -213,7 +213,7 @@
       </tr>
     </table>
 
-      <div  id="parent" style="margin:15px"></div>
+      <!-- <div  id="parent" style="margin:15px"></div> -->
       <!-- <div class="border"  >
           <div *ngFor="let item of data_material" id="el"><table><tr><td width="40%"><input disabled placeholder="ID Barang" type="text" value="{{item.id_barang}}" class="classInput"/></td><td width="20%"><input type="text" value="{{item.jml_pemakaian}}" disabled placeholder="volume" id="volume" class="classInput"/></td><td  width="20%"><input value="{{item.satuan}}" type="text" disabled placeholder="satuan" id="satuan" class="classInput"/></td></tr></table></div>
       </div> -->
