--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,6 +26,10 @@
   </ion-item>
 
   <button color="light" ion-button full (click)="putLogin()">Login</button>
+  <br/>
+  <br/>
+  <br/>
+  <i>Versi {{versi}}</i>
 
 </ion-list>
 </ion-content>
