--- a/src/pages/pemakaian3/pemakaian3.html
+++ b/src/pages/pemakaian3/pemakaian3.html
@@ -349,6 +349,22 @@
 		    	</td>
 	    	</tr>
 	    	<tr>
+	    		<td>
+		    		<ion-radio  value="11"></ion-radio> 200MB
+		    	</td>
+		    	<td>
+		    		<ion-radio  value="12"></ion-radio> 300MB
+		    	</td>
+	    	</tr>
+	    	<tr>
+	    		<td>
+		    		<ion-radio  value="13"></ion-radio> 1GB
+		    	</td>
+		    	<td>
+		    		&nbsp;
+		    	</td>
+	    	</tr>
+	    	<tr>
 	    		<td colspan="2">
 	    			<table>
 	    			<tr>
