--- a/src/pages/pemakaian4/pemakaian4.html
+++ b/src/pages/pemakaian4/pemakaian4.html
@@ -32,7 +32,7 @@
 	  </ion-card-content>
 	</ion-card>
 
-	<ion-card>
+	<ion-card hidden>
 
 	  <ion-card-header>
 	   <font color="red"> Kendala</font>
@@ -86,6 +86,7 @@
 	  </ion-card-content>
 
 	</ion-card>
+	<br/>
 	<ion-card>
 
 	  <ion-card-header>
