--- a/src/pages/pemakaian/pemakaian.html
+++ b/src/pages/pemakaian/pemakaian.html
@@ -145,8 +145,35 @@
 
   <ion-item>
     <ion-label stacked><font color="black">Alamat Pelanggan</font></ion-label>
-    <ion-textarea rows="6" cols="20" placeholder="Tulis Disini : Nama Gang, RT/RW dan tanda / referensi alamat sekitar" [(ngModel)]="alamat_pelanggan" style="color:grey"></ion-textarea>
+    <ion-textarea rows="6" cols="20" placeholder="Tulis sesuatu" [(ngModel)]="alamat_pelanggan" style="color:grey"></ion-textarea>
   </ion-item>
+
+    <div style="margin-left: 18px;">
+        <ion-label stacked><font color="black">RT / RW</font></ion-label>
+    </div>
+    <table style="margin-left: 10px;">
+      <tr>
+        <td>  
+          <ion-input placeholder="Tulis sesuatu" [(ngModel)]="rt" style="color:grey"></ion-input>
+        </td>
+        <td>
+            &nbsp;/&nbsp;
+        </td>
+        <td>
+            <ion-input placeholder="Tulis sesuatu" [(ngModel)]="rw" style="color:grey"></ion-input>
+        </td>
+      </tr>
+    </table>
+
+  <ion-item>
+    <ion-label stacked><font color="black">Kelurahan</font></ion-label>
+    <ion-input placeholder="Tulis sesuatu" [(ngModel)]="kelurahan" style="color:grey"></ion-input>
+  </ion-item> 
+  
+  <ion-item>
+    <ion-label stacked><font color="black">Kecamatan</font></ion-label>
+    <ion-input placeholder="Tulis sesuatu" [(ngModel)]="kelurahan" style="color:grey"></ion-input>
+  </ion-item> 
 
   <ion-item>
     <ion-label stacked><font color="black">Nama Pelanggan</font></ion-label>
